Added in better front end need to add login service and hook it up to the API

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ build/Release
 node_modules/
 jspm_packages/
 _FrontEnd/node_modules
+_NewFrontEnd/node_modules
 
 # TypeScript v1 declaration files
 typings/
